[package]
name = "philiprehberger-diff-assert"
version = "0.1.6"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Better test assertion diffs with colored inline comparisons"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-diff-assert"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-diff-assert"
keywords = ["assert", "diff", "testing", "debug", "comparison"]
categories = ["development-tools::testing"]
